--- a/templates/page.html
+++ b/templates/page.html
@@ -26,7 +26,7 @@
       color: black;
     } 
     
-    {% if not request.MOBILE %}
+    @media screen and (min-width: 769px) {
     /* Create three equal columns that floats next to each other */
     .column {
       float: left;
@@ -39,7 +39,7 @@
       display: table;
       clear: both;
     }
-    {% endif %}
+    }
 
   </style>
 
